Ensure even spacing between modules in Explore and Place

--- a/static/css/explore.scss
+++ b/static/css/explore.scss
@@ -255,7 +255,7 @@
   border-radius: var(--border-radius-primary);
   border: var(--border-primary);
   background: var(--loading-background);
-  margin-bottom: 24px;
+  margin-bottom: 31px;
   width: 100%;
   color: var(--gm-3-ref-neutral-neutral-50) !important
 }
@@ -267,7 +267,7 @@
   border-radius: var(--border-radius-primary);
   border: var(--border-primary);
   background: var(--gm-3-white);
-  margin-bottom: 24px;
+  margin-bottom: 31px;
   width: 100%;
 }
 
