--- a/static/css/nl_interface.scss
+++ b/static/css/nl_interface.scss
@@ -792,7 +792,7 @@ $loading-dot-color: #999;
 }
 
 #subject-page-main-pane .col-12 {
-  padding-bottom: 1em;
+  padding-bottom: 0 !important;
 }
 
 .examples-container {
